Version 1.1.1
==============

* Fix burning torch not working properly if there are more than 256 objects in a level.
* Fix projectiles flying through animating objects.
* Fix harpoon gun doing enormous damage on enemies.
* Fix train death animation.
* Fix TR1 wolf damage value inflicted on a close bite attack.
* Fix TR1 bear various original AI issues.
* Fix TR2 knife thrower AI.
* Fix volume change in settings not affecting voice track.
* Overhaul look mode:
 - Allow for consistent and wider viewing angles while crawling, crouching, and hanging.
 - Improve movement and control.
 - Re-enable looking while performing up jump, backward jump, or backward crawl.
 - Add functionality to rotate slowly when holding Walk while using binoculars or lasersight.
* Add swinging blade.
* Add crumbling platform and add new OCBs for behaviour:
 - OCB 0: Default behaviour. When the player steps on the platform, it will shake and crumble after 1.2 seconds.
 - OCB > 0: When the player steps on the platform, it will crumble after the number of frames set in the OCB.
 - A positive value results in activation via player collision.
 - A negative value requires a trigger to activate.

Lua API changes:
* Add Lara::GetAmmoType() function to read the ammo that Lara is using.
* Add Lara::GetControlLock() and Lara::SetControlLock() functions to handle controls locking.
* Make Vec2 object float-based instead of integer-based.
* Add Vec2 arithmetic for division with a number and multiplication with another Vec2.
* Add log messages warnings to functions AddCallback and RemoveCallback.
* Fix InventoryItem constructor, now it will accept compound values in Item Action parameter.
* Fix Moveable constructor forcing initial animation to 0 and hit points to 10, even if not specified.

Version 1.1.0
==============

* Fix enemies shooting Lara through static meshes and moveables.
* Fix skeletons and mummies not being affected by explosive weapons.